--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="legend-popup" style="background: transparent; pointer-events: none" layout="row">
-        <md-button flex style="pointer-events: auto" md-theme="{{themePrimaryButtons}}" ng-click="showLegend = !showLegend"
+        <md-button style="pointer-events: auto" md-theme="{{themePrimaryButtons}}" ng-click="showLegend = !showLegend"
                    class="md-fab md-mini md-primary opacity-hover">
             <md-icon class="fa" ng-show="!showLegend" md-font-icon="fa-eye"></md-icon>
             <md-icon class="fa" ng-show="showLegend" md-font-icon="fa-eye-slash"></md-icon>
