--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -43,7 +43,7 @@
                 <span class="fa fa-recycle subarray-action-icon hover-opacity" md-ink-ripple
                     ng-show="parent.vm.iAmAtLeastCA()" title="Free Subarray" ng-click="parent.vm.freeSubarray()"></span>
                 <div ng-include="'app/scheduler/templates/sb-scheduled-list-header.html'" class="list-subheader-title"
-                    style="height: 32px; width: 100%"></div>
+                    style="height: 32px; width: 100%; pointer-events: none"></div>
             </md-toolbar>
             <div layout="column" flex ng-include="'app/scheduler/templates/pb-scheduled-list.html'"></div>
         </div>
@@ -134,7 +134,7 @@
             <div class="resource-counter-overlay" title="The amount of receptors assigned to this subarray">
                 {{parent.vm.sensorValues[vm.subarray.name + '_number_ants'].value}}
             </div>
-            <div ng-repeat="resourceAlloc in parent.vm.sensorValues[vm.subarray.name + '_allocations'].parsedValue" ng-class="{'maintenance-bg-hover': parent.vm.isResourceInMaintenance(resourceAlloc[0])}"
+            <div ng-repeat="resourceAlloc in parent.vm.sensorValues[vm.subarray.name + '_allocations'].parsedValue" ng-class="parent.vm.classForResource(resourceAlloc[0])"
                 class="resource-item" style="max-height: 80px; position: relative; padding-right: 0" layout="row"
                 layout-align="start center">
                 <div flex layout="column">
