--- a/app/health/health.html
+++ b/app/health/health.html
@@ -22,7 +22,7 @@
             <label>{{tree.name}}</label>
         </md-toolbar>
         <div flex ng-repeat="sub in tree.subs" ng-class="vm.getClassesOfSensor(sub)" layout="column" layout-align="center center"
-            style="margin: 1px 0">
+            style="margin: 1px 0" title="{{vm.getSensorTextFromSub(sub)}}">
             <label ng-mouseup="vm.subMouseUp(sub, $event)" style="cursor: pointer">{{sub.name}}</label>
         </div>
     </div>
