--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -14,9 +14,9 @@
 
         <md-list class="receptor-state-list">
             <md-item ng-repeat="rec in vm.receptorsData">
-                <md-item-content ng-class="{'receptor-state-div-error': vm.sensorValues[rec.name + '_sensors_ok'].status === 'error', 'receptor-state-div-warn': vm.sensorValues[rec.name + '_sensors_ok'].status === 'warn'}"
+                <md-item-content ng-class="{'receptor-state-div-error': vm.sensorValues[rec.name + '_device_status'].status === 'error', 'receptor-state-div-warn': vm.sensorValues[rec.name + '_device_status'].status === 'warn'}"
                                  class="receptor-state-div md-whiteframe-z2" layout="column"
-                                 layout-align="start center" title="{{'Sensors ok status: ' + vm.sensorValues[rec.name + '_sensors_ok'].status}}">
+                                 layout-align="start center" title="{{'Device status: ' + vm.sensorValues[rec.name + '_device_status'].status}}">
                     <span style="min-height: 25px; max-width: 140px;" title="Last Changed; Since: {{rec.since}}">{{rec.fromNow}}</span>
                     <span style="font-size: 26px;" flex><b>{{rec.name}}</b></span>
                     <span ng-class="vm.getReceptorModeTextClass(rec.name)">
