--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,4 +1,4 @@
-<div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px; min-width: 800px; min-height: 900px">
+<div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px; min-width: 800px; min-height: 500px">
     <div layout="column" style="min-height: 200px;">
         <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
             <span style="margin-top: -10px" flex>Sensor Values</span>
@@ -40,9 +40,9 @@
             </div>
         </md-toolbar>
         <div class="md-whiteframe-z1" flex style="padding: 8px;" layout="row">
-            <compass-chart redraw-function="vm.redrawCompass" style="min-width: 120px; min-height: 120px;">
+            <compass-chart redraw-function="vm.redrawCompass" style="min-width: 140px; min-height: 140px;">
             </compass-chart>
-            <div flex layout="column" style="margin-left: 56px;">
+            <div flex layout="column" layout-wrap style="margin-left: 56px;">
                 <div ng-repeat="sensorName in vm.ancSensors track by $index" class="{{'anc_' + sensorName + ' resource-sensor-item'}}"
                     ng-if="sensorName !== 'wind direction'" layout="row">
                     <span style="min-width: 140px">{{sensorName}}</span>
@@ -111,7 +111,7 @@
                 </md-menu-content>
             </md-menu>
         </md-toolbar>
-        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 235px; margin-bottom: 8px" layout="column" ng-show="!vm.hideWindChart">
+        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 200px; margin-bottom: 8px" layout="column" ng-show="!vm.hideWindChart">
             <multi-line-chart flex load-options-function="vm.loadWindOptions" redraw-function="vm.redrawWindChart" y-max="vm.yAxisWindMaxValue" hide-context-zoom="true"
                               y-min="vm.yAxisWindMinValue" mouse-over-tooltip="true" clear-function="vm.clearWindChart"
                               remove-sensor-function="vm.removeSensorLine" download-csv="vm.downloadAsCSV"></multi-line-chart>
@@ -196,7 +196,7 @@
                 </md-menu-content>
             </md-menu>
         </md-toolbar>
-        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 600px;" layout="column" ng-show="!vm.hideWeatherChart">
+        <div class="md-whiteframe-z1" flex style="padding: 8px; min-height: 200px;" layout="column" ng-show="!vm.hideWeatherChart">
             <multi-line-two-y-axis-chart flex redraw-function="vm.redrawChart" clear-function="vm.clearChart" class="sensor-list-multi-line-chart"
                                          remove-sensor-function="vm.removeSensorLine" y-left-max="vm.yAxisMaxValue"
                                          y-left-min="vm.yAxisMinValue" y-right-min="vm.yAxisRightMinValue" y-right-max="vm.yAxisRightMaxValue" mouse-over-tooltip="true"></multi-line-two-y-axis-chart>
