--- a/app/config/config.html
+++ b/app/config/config.html
@@ -44,8 +44,8 @@
                 <md-checkbox class="md-primary alarms-tools-checkbox" ng-model="$root.showLargeAlarms"
                              ng-change="vm.saveToLocalStorage('showLargeAlarms', $root.showLargeAlarms)">Show Detailed Alarm Notifications
                 </md-checkbox>
-                <md-checkbox class="md-primary alarms-tools-checkbox" ng-model="$root.disableAlarmSounds"
-                             ng-change="vm.saveToLocalStorage('disableAlarmSounds', $root.disableAlarmSounds)">Disable Alarm Sounds
+                <md-checkbox class="md-primary alarms-tools-checkbox" ng-model="$root.enableAlarmSounds"
+                             ng-change="vm.saveToLocalStorage('enableAlarmSounds', $root.enableAlarmSounds)">Enable Alarm Sounds
                 </md-checkbox>
             </div>
 
